# Ogitor-Facade-Plugins

Media/EditorResources/: FaInteractor.material  TriggerArea0.mesh  TriggerArea1.mesh  TriggerArea2.mesh
Plugins/: CMakeLists.txt
Plugins/Interactor/: CMakeLists.txt  FaInteractor.cpp  FaInteractor.h
Plugins/Music/: CMakeLists.txt
Plugins/Physics/: Fysics.cpp  Fysics.h
Plugins/Player/: FaPlayer.cpp
Plugins/Script/: CMakeLists.txt
Plugins/Sound/: FaSound.cpp  FaSound.h
Plugins/TriggerArea/: CMakeLists.txt  FaTriggerArea.cpp  FaTriggerArea.h
